--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <!--Binaries-->
         <h3>Official Bootlegger</h3>
         <h3>HQ Audio (Denotes undisturbed taper audio or better)</h3>
+        <h3>Length</h3>
         <h3>Marathon Set</h3>
         <h3>Full Length Set (~1:30 - 2 hours)</h3>
         <h3>Partial Sets (~1hr or less)</h3>
